--- a/category.html
+++ b/category.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230715153053">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230717225007">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -93,10 +93,10 @@
 								<a href="category.html" class="menu__link">Особенные ковры</a>
 							</li>
 							<li class="menu__item">
-								<a href="" class="menu__link">Центр поддержки</a>
+								<a href="support.html" class="menu__link">Центр поддержки</a>
 							</li>
 							<li class="menu__item">
-								<a href="" class="menu__link">Контакты</a>
+								<a href="#footer-contacts" class="menu__link">Контакты</a>
 							</li>
 							<li class="menu__item menu__item_mobile">
 								<a href="auth.html" class="menu__link">Вход / Регистрация</a>
@@ -700,7 +700,7 @@
 							<a href="support.html" class="item-footer__link">Возвраты</a>
 						</div>
 					</div>
-					<div class="footer__item item-footer" data-spollers="479">
+					<div class="footer__item item-footer" data-spollers="479" id="footer-contacts">
 						<button data-spoller class="item-footer__title"><span>Помощь и контакты</span> <i class="spoller-icon"></i></button>
 						<div class="item-footer__content">
 							<a href="tel:87756576676" class="item-footer__link">
@@ -760,7 +760,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230715153053"></script>
+	<script src="js/app.min.js?_v=20230717225007"></script>
 </body>
 
 </html>
